feito a api
